--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.3.2
 decouple==0.0.7
+dj-database-url==0.5.0
 Django==3.2
+django-on-heroku==1.1.2
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 Pillow==8.2.0
