--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Jinja2==2.11.3
 MarkupSafe==1.1.1
 Pillow==8.2.0
 psycopg2-binary==2.8.6
+python-decouple==3.4
 pytz==2021.1
 sqlparse==0.4.1
 whitenoise==5.2.0
