--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ decouple==0.0.7
 dj-database-url==0.5.0
 Django==3.2
 django-on-heroku==1.1.2
+gunicorn==20.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
 Pillow==8.2.0
